# discord_c2

./: .env  .gitignore  Cargo.toml  README.MD  build.rs  ruscord-example.toml  rustfmt.toml
src/: _main.rs  config.rs  errors.rs  event_handler.rs  main.rs
src/commands/: exfiltrate.rs  info.rs  mod.rs  process.rs  purge.rs  recon.rs  snapshot.rs  utils.rs
src/commands/exfiltration/: exfiltrate.rs  logins.rs  mod.rs
src/commands/misc/: info.rs  mod.rs  purge.rs
src/commands/recon/: recon.rs
src/commands/reconnaissance/: mod.rs  recon.rs
src/commands/sessions/: download.rs  exit.rs  mod.rs  session.rs
src/commands/shell/: download.rs  exit.rs  mod.rs  session.rs  upload.rs
src/commands/spyware/: snapshot.rs
src/discord_utils/: bot_functions.rs  channels.rs  mod.rs
src/libraries/: mod.rs
src/libraries/nokhwa_wrapper/: wrapper.rs
src/os/: download.rs  mod.rs  process_handler.rs  recon.rs  recon_utils.rs  traits.rs
src/os/unix/: api.rs  mod.rs  process.rs  recon.rs
src/os/windows/: api.rs  mod.rs  process.rs  recon.rs
src/utils/: agent.rs  channels.rs  logins.rs  macros.rs  mod.rs  tracing.rs  utils.rs
