[package]
name = "discord-c2"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sysinfo = "0.30.12"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "current"}
litcrypt2 = "0.1.2"
once_cell = "1.19.0"
tokio-util = { version = "0.7.11", features = ["codec"] }
libc = "0.2.155"

[dependencies.tokio]
version = "1.28.1"
features = ["full"]

[profile.dev]
opt-level = 0
debug = true
lto = "off"
panic = "unwind"
incremental = true

[profile.release]
opt-level = "z"
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1
